# bank-marketing-prediction

./: .dockerignore  .gitignore  Dockerfile  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: app.py
src/models/: predictor.py  train.py
src/pages/: 01_data_analysis.py  02_prediction.py
src/utils/: data_loader.py  preprocessing.py
standards/: 00-project-context.md  01-requirements.md
tests/: conftest.py  test_data_loader.py  test_example.py  test_predictor.py  test_preprocessing.py  test_train.py
